--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-vue": "^7.3.0",
     "@indielayer/ui": "^1.10.0",
     "@vueuse/core": "^12.2.0",
     "axios": "^1.7.7",
+    "ckeditor5": "^44.1.0",
     "pinia": "^2.2.6",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
@@ -31,6 +33,7 @@
     "tailwindcss": "^3.4.14",
     "typescript": "~5.6.3",
     "unplugin-auto-import": "^0.18.3",
+    "unplugin-vue-components": "^28.0.0",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.4",
     "vue-tsc": "^2.1.10"
