--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@ckeditor/ckeditor5-vue": "^7.3.0",
     "@indielayer/ui": "^1.10.0",
-    "@vueuse/core": "^12.2.0",
+    "@vueuse/core": "^12.5.0",
+    "@vueuse/integrations": "^12.5.0",
     "axios": "^1.7.7",
     "ckeditor5": "^44.1.0",
     "pinia": "^2.2.6",
+    "universal-cookie": "^7.2.2",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
     "vue-toastification": "^2.0.0-rc.5",
