--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ckeditor/ckeditor5-vue": "^7.3.0",
     "@indielayer/ui": "^1.10.0",
     "@techie04/vue3-phonenumber-input": "^0.0.8",
+    "@vitejs/plugin-vue": "^5.2.1",
     "@vueuse/components": "^12.7.0",
     "@vueuse/core": "^12.5.0",
     "@vueuse/integrations": "^12.5.0",
@@ -22,6 +23,7 @@
     "libphonenumber-js": "^1.11.20",
     "pinia": "^2.2.6",
     "universal-cookie": "^7.2.2",
+    "unplugin-vue": "^6.0.0",
     "vue": "^3.5.12",
     "vue-phone-number-input": "^1.12.13",
     "vue-router": "^4.4.5",
@@ -31,7 +33,6 @@
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.17.6",
-    "@vitejs/plugin-vue": "^5.1.4",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.20",
     "npm-run-all2": "^7.0.1",
@@ -39,7 +40,7 @@
     "tailwindcss": "^3.4.14",
     "typescript": "~5.6.3",
     "unplugin-auto-import": "^0.18.3",
-    "unplugin-vue-components": "^28.0.0",
+    "unplugin-vue-components": "^28.4.0",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.4",
     "vue-tsc": "^2.1.10"
