--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,9 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+[[redirects]]
+  from = "/api/*"
+  to = "https://job-portal-backend-a3ux.onrender.com/api/:splat"
+  status = 200
+  force = true
