--- a/netlify.toml
+++ b/netlify.toml
@@ -12,3 +12,5 @@
   to = "https://job-portal-backend-a3ux.onrender.com/api/:splat"
   status = 200
   force = true
+   [headers]
+    Access-Control-Allow-Origin = "*"
