Update Netlify configuration to add API proxy settings and improve header syntax for CORS support.

--- a/netlify.toml
+++ b/netlify.toml
@@ -7,10 +7,10 @@
   to = "/index.html"
   status = 200
 
+# API proxy - MUST come before the SPA fallback
 [[redirects]]
   from = "/api/*"
   to = "https://job-portal-backend-a3ux.onrender.com/api/:splat"
   status = 200
   force = true
-   [headers]
-    Access-Control-Allow-Origin = "*"
+  headers = { Access-Control-Allow-Origin = "*" }
