--- a/netlify.toml
+++ b/netlify.toml
@@ -2,13 +2,16 @@
   publish = "dist"
   command = "yarn build"
 
-# API proxy - MUST come before the SPA fallback
 [[redirects]]
   from = "/api/*"
-  to = "https://job-portal-backend-a3ux.onrender.com/api/:splat"
+  to = "https://job-portal-backend-a3ux.onrender.com/:splat"  # Remove `/api` prefix here
   status = 200
   force = true
-  headers = { Access-Control-Allow-Origin = "*" }
+  headers = { 
+    Access-Control-Allow-Origin = "*",
+    X-Forwarded-Host = "careerhubpk.netlify.app" 
+  }
+
   
 [[redirects]]
   from = "/*"
