Refactor Netlify configuration to improve API proxy header syntax and maintain CORS support, ensuring cleaner and more readable settings.

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,19 +2,16 @@
   publish = "dist"
   command = "yarn build"
 
-# API proxy - must come FIRST
 [[redirects]]
   from = "/api/*"
   to = "https://job-portal-backend-a3ux.onrender.com/:splat"
   status = 200
   force = true
-  headers = { 
-    Access-Control-Allow-Origin = "*",
-    X-Forwarded-Host = "careerhubpk.netlify.app",
+  [headers]
+    Access-Control-Allow-Origin = "*"
+    X-Forwarded-Host = "careerhubpk.netlify.app"
     X-Forwarded-Proto = "https"
-  }
 
-# SPA fallback - must come LAST
 [[redirects]]
   from = "/*"
   to = "/index.html"
