--- a/netlify.toml
+++ b/netlify.toml
@@ -2,16 +2,31 @@
   publish = "dist"
   command = "yarn build"
 
+# Redirect API requests to backend
 [[redirects]]
   from = "/api/*"
   to = "https://job-portal-backend-a3ux.onrender.com/api/:splat"
   status = 200
   force = true
-  [headers]
+  [redirects.headers]
     Access-Control-Allow-Origin = "*"
-    X-Forwarded-Host = "careerhubpk.netlify.app"
-    X-Forwarded-Proto = "https"
+    Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
+    Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept, Authorization"
 
+# Handle OPTIONS requests (for CORS preflight)
+[[redirects]]
+  from = "/api/*"
+  to = "https://job-portal-backend-a3ux.onrender.com/api/:splat"
+  status = 204
+  method = "OPTIONS"
+  force = true
+  [redirects.headers]
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
+    Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept, Authorization"
+    Access-Control-Max-Age = "86400"
+
+# SPA fallback
 [[redirects]]
   from = "/*"
   to = "/index.html"
