Enhance axios service configuration for improved error handling and maintainability, ensuring consistent request and response interception logic.

--- a/netlify.toml
+++ b/netlify.toml
@@ -12,6 +12,7 @@
     Access-Control-Allow-Origin = "*"
     Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
     Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept, Authorization"
+    X-Forwarded-Host = "careerhubpk.netlify.app"
 
 # Handle OPTIONS requests (for CORS preflight)
 [[redirects]]
