--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
   publish = "dist"
   command = "yarn build"
 
-# Redirect API requests to backend
+# Primary API redirect with complete headers
 [[redirects]]
   from = "/api/*"
   to = "https://job-portal-backend-a3ux.onrender.com/api/:splat"
@@ -10,11 +10,13 @@
   force = true
   [redirects.headers]
     Access-Control-Allow-Origin = "*"
-    Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
-    Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept, Authorization"
+    Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, PATCH, OPTIONS"
+    Access-Control-Allow-Headers = "*"
+    Access-Control-Allow-Credentials = "true"
     X-Forwarded-Host = "careerhubpk.netlify.app"
+    X-Forwarded-Proto = "https"
 
-# Handle OPTIONS requests (for CORS preflight)
+# Handle OPTIONS preflight requests
 [[redirects]]
   from = "/api/*"
   to = "https://job-portal-backend-a3ux.onrender.com/api/:splat"
@@ -23,8 +25,9 @@
   force = true
   [redirects.headers]
     Access-Control-Allow-Origin = "*"
-    Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
-    Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept, Authorization"
+    Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, PATCH, OPTIONS"
+    Access-Control-Allow-Headers = "*"
+    Access-Control-Allow-Credentials = "true"
     Access-Control-Max-Age = "86400"
 
 # SPA fallback
